# MPC2077

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  SETUP_GITHUB.ps1  claude-progress.md  init.sh  install_vst3_admin.bat  mpc_build.bat  mpc_configure.bat
.github/workflows/: macos-build.yml  windows-build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DrumEngine.cpp  DrumEngine.h  DrumSynth.cpp  DrumSynth.h  FxChain.cpp  FxChain.h  MpcConstants.h  StepSequencer.cpp  StepSequencer.h
Source/UI/: MPC2077LookAndFeel.cpp  MPC2077LookAndFeel.h  Theme.h
Source/UI/Components/: CityBackdrop.cpp  CityBackdrop.h  ControlPanel.cpp  ControlPanel.h  ControlSection.cpp  ControlSection.h  FxRack.cpp  FxRack.h  MixerStrip.cpp  MixerStrip.h  ModeBar.cpp  ModeBar.h  PadGrid.cpp  PadGrid.h  PresetBank.cpp  PresetBank.h  SequencerView.cpp  SequencerView.h  TopPanel.cpp  TopPanel.h  TouchRibbon.cpp  TouchRibbon.h
assets/: Standalone.manifest
